add missing setting

--- a/README-getseqs.org
+++ b/README-getseqs.org
@@ -26,23 +26,104 @@ grep --color=never -c '>' output-getseqs/*/*centroids.fasta | cut -d'/' -f3 | cs
 #+END_SRC
 
 #+RESULTS:
-|-------------------------------------------------+------|
-| Actinomyces_turicensis.centroids.fasta          |    1 |
-| Actinomycetales.centroids.fasta                 |   23 |
-| Aerococcus.centroids.fasta                      |   27 |
-| Aerococcus_christensenii.centroids.fasta        |   11 |
-| Anaerococcus.centroids.fasta                    |   19 |
-| Anaerococcus_prevotii_tetradius.centroids.fasta |   13 |
-| Anaerococcus_vaginalis.centroids.fasta          |    3 |
-| Atopobium.centroids.fasta                       |  404 |
-| Atopobium_minutum.centroids.fasta               |    1 |
-| Atopobium_vaginae.centroids.fasta               |  375 |
-| Bacilli.centroids.fasta                         | 2828 |
-| Bacteria.centroids.fasta                        | 7761 |
-| BVAB1.centroids.fasta                           |  352 |
-| BVAB2.centroids.fasta                           |   56 |
-| Porphyromonas_uenonis.centroids.fasta           |    1 |
-|-------------------------------------------------+------|
+|----------------------------------------------------------------+------|
+| Actinomyces_turicensis.centroids.fasta                         |    1 |
+| Actinomycetales.centroids.fasta                                |   23 |
+| Aerococcus.centroids.fasta                                     |   27 |
+| Aerococcus_christensenii.centroids.fasta                       |   11 |
+| Anaerococcus.centroids.fasta                                   |   19 |
+| Anaerococcus_prevotii_tetradius.centroids.fasta                |   13 |
+| Anaerococcus_vaginalis.centroids.fasta                         |    3 |
+| Atopobium.centroids.fasta                                      |  404 |
+| Atopobium_minutum.centroids.fasta                              |    1 |
+| Atopobium_vaginae.centroids.fasta                              |  375 |
+| BVAB1.centroids.fasta                                          |  352 |
+| BVAB2.centroids.fasta                                          |   56 |
+| Bacilli.centroids.fasta                                        | 2000 |
+| Bacteria.centroids.fasta                                       | 2000 |
+| Bacteroidales.centroids.fasta                                  | 1483 |
+| Bifidobacterium.centroids.fasta                                |    2 |
+| Campylobacter.centroids.fasta                                  |    5 |
+| Campylobacter_ureolyticus.centroids.fasta                      |    1 |
+| Clostridiales.centroids.fasta                                  |  621 |
+| Clostridiales_Family_XI_Incertae_Sedis.centroids.fasta         |  119 |
+| Clostridiales_genomosp_BVAB3.centroids.fasta                   |   14 |
+| Dialister.centroids.fasta                                      |   83 |
+| Dialister_micraerophilus.centroids.fasta                       |   31 |
+| Dialister_propionicifaciens.centroids.fasta                    |    3 |
+| Dialister_sp_type_2.centroids.fasta                            |   25 |
+| Eggerthella.centroids.fasta                                    |   80 |
+| Eggerthella_sp_type_1.centroids.fasta                          |   88 |
+| Eubacterium.centroids.fasta                                    |    2 |
+| Finegoldia_magna.centroids.fasta                               |    2 |
+| Firmicutes.centroids.fasta                                     | 2000 |
+| Fusobacterium.centroids.fasta                                  |    9 |
+| Fusobacterium_nucleatum.centroids.fasta                        |    7 |
+| Gardnerella.centroids.fasta                                    |  989 |
+| Gardnerella_vaginalis.centroids.fasta                          |  923 |
+| Gemella.centroids.fasta                                        |   40 |
+| Gemella_sp_WAL_1945J.centroids.fasta                           |   28 |
+| Haemophilus.centroids.fasta                                    |    2 |
+| Jonquetella.centroids.fasta                                    |    3 |
+| Lactobacillus.centroids.fasta                                  | 2000 |
+| Lactobacillus_acidophilus.centroids.fasta                      |    9 |
+| Lactobacillus_acidophilus_crispatus.centroids.fasta            |  164 |
+| Lactobacillus_acidophilus_crispatus_gallinarum.centroids.fasta |  143 |
+| Lactobacillus_acidophilus_crispatus_helveticus.centroids.fasta |    2 |
+| Lactobacillus_crispatus.centroids.fasta                        |   93 |
+| Lactobacillus_crispatus_gallinarum.centroids.fasta             |  450 |
+| Lactobacillus_crispatus_helveticus.centroids.fasta             |    1 |
+| Lactobacillus_gallinarum.centroids.fasta                       |    4 |
+| Lactobacillus_gasseri.centroids.fasta                          |   10 |
+| Lactobacillus_gasseri_johnsonii.centroids.fasta                |    8 |
+| Lactobacillus_helveticus.centroids.fasta                       |    1 |
+| Lactobacillus_iners.centroids.fasta                            | 1586 |
+| Lactobacillus_jensenii.centroids.fasta                         |  140 |
+| Lactobacillus_reuteri.centroids.fasta                          |    3 |
+| Lactobacillus_reuteri_vaginalis.centroids.fasta                |    2 |
+| Leptotrichia_amnionii.centroids.fasta                          |  590 |
+| Megasphaera.centroids.fasta                                    |  202 |
+| Megasphaera_sp_type_1.centroids.fasta                          |  173 |
+| Megasphaera_sp_type_2.centroids.fasta                          |    4 |
+| Mobiluncus.centroids.fasta                                     |   10 |
+| Mobiluncus_curtisii.centroids.fasta                            |    4 |
+| Mobiluncus_mulieris.centroids.fasta                            |    4 |
+| Moryella.centroids.fasta                                       |    5 |
+| Mycoplasma.centroids.fasta                                     |   18 |
+| Mycoplasma_hominis.centroids.fasta                             |   12 |
+| Neisseria_gonorrhoeae.centroids.fasta                          |    3 |
+| Parvimonas_micra.centroids.fasta                               |   51 |
+| Peptoniphilus.centroids.fasta                                  |   16 |
+| Peptoniphilus_harei.centroids.fasta                            |    9 |
+| Peptoniphilus_lacrimalis.centroids.fasta                       |    9 |
+| Peptostreptococcus.centroids.fasta                             |   33 |
+| Peptostreptococcus_anaerobius.centroids.fasta                  |   27 |
+| Peptostreptococcus_stomatis.centroids.fasta                    |    5 |
+| Porphyromonas.centroids.fasta                                  |   63 |
+| Porphyromonas_asaccharolytica.centroids.fasta                  |   22 |
+| Porphyromonas_asaccharolytica_uenonis.centroids.fasta          |   11 |
+| Porphyromonas_sp_type_1.centroids.fasta                        |    4 |
+| Porphyromonas_uenonis.centroids.fasta                          |    1 |
+| Prevotella.centroids.fasta                                     | 1355 |
+| Prevotella_amnii.centroids.fasta                               |  305 |
+| Prevotella_bergensis.centroids.fasta                           |    2 |
+| Prevotella_bivia.centroids.fasta                               |  204 |
+| Prevotella_buccalis.centroids.fasta                            |   45 |
+| Prevotella_disiens.centroids.fasta                             |   37 |
+| Prevotella_genogroup_3.centroids.fasta                         |   28 |
+| Prevotella_genogroup_4.centroids.fasta                         |   79 |
+| Prevotella_genogroup_7.centroids.fasta                         |    7 |
+| Prevotella_melaninogenica.centroids.fasta                      |   59 |
+| Prevotella_timonensis.centroids.fasta                          |  501 |
+| Sneathia.centroids.fasta                                       |  977 |
+| Sneathia_sanguinegens.centroids.fasta                          |  107 |
+| Staphylococcus.centroids.fasta                                 |    1 |
+| Staphylococcus_epidermidis.centroids.fasta                     |    2 |
+| Streptococcus_agalactiae.centroids.fasta                       |    3 |
+| Streptococcus_anginosus.centroids.fasta                        |    1 |
+| Thermoleophilum_minutum.centroids.fasta                        |    2 |
+| Veillonella_montpellierensis.centroids.fasta                   |    5 |
+|----------------------------------------------------------------+------|
 
 
 
